--- a/{{ cookiecutter.project_name }}/.coveragerc
+++ b/{{ cookiecutter.project_name }}/.coveragerc
@@ -1,7 +1,21 @@
-[run]
-branch = True
-omit = */build/*,tests/*
 [report]
 exclude_lines =
     pragma: no cover
-    raise NotImplementedError.*
+    def __repr__
+    if self.debug:
+    if settings.DEBUG
+    raise AssertionError
+    raise NotImplementedError
+    if 0:
+    if __name__ == .__main__.:
+
+[run]
+omit =
+    test/**/*.py
+    test/*.py
+    tests/**/*.py
+    tests/*.py
+    ~/.local/lib/python3.8/site-packages/six.py
+    **/__init__.py
+    venv/**/*
+    .virtualenvs/**/*
