--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -1,9 +1,14 @@
+[pytest]
+env =
+    POWERTOOLS_SERVICE_NAME = {{ cookiecutter.project_name }}
+    POWERTOOLS_METRICS_NAMESPACE = {{ cookiecutter.metrics_namespace }}
+    POWERTOOLS_TRACE_DISABLED = true
+    POWERTOOLS_LOGGER_LOG_EVENT = true
+    POWERTOOLS_LOGGER_SAMPLE_RATE = 0.1
+
 [flake8]
-ignore = E203, E266, E302, E501, W503, F403, F401
-max-line-length = 140
-# max-complexity = 18
-select = B,C,E,F,W,T4,B9
+max-line-length = 120
 
 [tool.black]
-line-length = 140
+line-length = 120
 include = '\.pyi?$'
