--- a/{{ cookiecutter.project_name }}/Pipfile
+++ b/{{ cookiecutter.project_name }}/Pipfile
@@ -3,16 +3,16 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
 boto3 = "*"
 aws-lambda-powertools = "*"
 
 [dev-packages]
-
 boto3 = "*"
+moto = "*"
 pytest = "*"
 pytest-cov = "*"
+pytest-env = "*"
 
 [requires]
 python_version = "3.8"
