--- a/{{ cookiecutter.project_name }}/.editorconfig
+++ b/{{ cookiecutter.project_name }}/.editorconfig
@@ -9,6 +9,9 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
+[Makefile]
+indent_style = tab
+
 [{package.json,.travis.yml}]
 indent_style = space
 indent_size = 2
