--- a/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_name }}/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+        args: ['--unsafe']
       - id: check-json
       - id: check-merge-conflict
       - id: check-case-conflict
@@ -32,7 +33,7 @@ repos:
       - id: check-added-large-files
 
   - repo: https://github.com/humitos/mirrors-autoflake
-    rev: v1.3
+    rev: master
     hooks:
       - id: autoflake
         args: ['--in-place', '--remove-all-unused-imports', '--remove-unused-variable']
