--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -12,3 +12,26 @@ max-line-length = 120
 [tool.black]
 line-length = 120
 include = '\.pyi?$'
+
+[report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    if self.debug:
+    if settings.DEBUG
+    raise AssertionError
+    raise NotImplementedError
+    if 0:
+    if __name__ == .__main__.:
+
+[coverage:run]
+omit =
+    test/**/*.py
+    test/*.py
+    tests/**/*.py
+    tests/*.py
+    ~/.local/lib/python3.8/site-packages/six.py
+    **/__init__.py
+    venv/**/*
+    .virtualenvs/**/*
+
