Change slug project others files

--- a/{{ cookiecutter.project_name }}/setup.cfg
+++ b/{{ cookiecutter.project_name }}/setup.cfg
@@ -1,6 +1,6 @@
 [pytest]
 env =
-    POWERTOOLS_SERVICE_NAME = {{ cookiecutter.project_name }}
+    POWERTOOLS_SERVICE_NAME = {{ cookiecutter.project_slug }}
     POWERTOOLS_METRICS_NAMESPACE = {{ cookiecutter.metrics_namespace }}
     POWERTOOLS_TRACE_DISABLED = true
     POWERTOOLS_LOGGER_LOG_EVENT = true
