--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,10 +1,11 @@
 name: Workflow
 
 on:
-  branches:
-    - 'feature/**'
-    - 'hotfix/**'
-    - 'bugfix/**'
+  push:
+    branches:
+      - 'feature/**'
+      - 'hotfix/**'
+      - 'bugfix/**'
 
 jobs:
   lint:
