--- a/.github/workflows/workflow-deploy.yml
+++ b/.github/workflows/workflow-deploy.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
     - name: Set up Python 3.x
-      uses: actions/setup-python@v2
       with:
         python-version: '3.x'
     - name: Install Dependencies
@@ -28,8 +28,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
       - name: Set up Python 3.x
-        uses: actions/setup-python@v2
         with:
           python-version: '3.x'
       - name: Install Dependencies
