--- a/.github/workflows/workflow-deploy.yml
+++ b/.github/workflows/workflow-deploy.yml
@@ -8,35 +8,24 @@ on:
       - develop
 
 jobs:
-  lint:
+  setup-python:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
     - name: Set up Python 3.x
+      uses: actions/setup-python@v2
       with:
         python-version: '3.x'
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install flake8 radon
         python -V
-        pip install flake8
-    - name: Lint
-        flake8 --max-line-length=120
-
-  complexity:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - name: Set up Python 3.x
-        with:
-          python-version: '3.x'
-      - name: Install Dependencies
+      with:
+        python-version: '3.x'
+      - name: Test code
         run: |
-          python -m pip install --upgrade pip
-          python -V
-          pip install radon
-      - name: Complexity
-          radon cc -na --exclude "venv*" .
-
+          flake8 --max-line-length=120
