--- a/.github/workflows/workflow-deploy.yml
+++ b/.github/workflows/workflow-deploy.yml
@@ -26,6 +26,5 @@ jobs:
     steps:
       with:
         python-version: '3.x'
-      - name: Test code
-        run: |
-          flake8 --max-line-length=120
+    - name: Test code
+      run: flake8 --max-line-length=120
